<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
	<string name="app_name">Welcome to Healthy Heroes!</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_login">Log In</string>
    <string name="title_activity_ingredient">What ingredients do you have?</string>
    <string name="title_activity_product">What products did you make?</string>
    <string name="title_activity_selling">Sell your products!</string>
    <string name="title_activity_view_session">View Session Info</string>
    <string name="title_activity_view_past_session">Past Sessions</string>
    <string name="title_past_sessions">Past Sesssions Log</string>

    <string name="participant_name">Who\'s Selling?</string>
    <string name="cashbox_value">Cashbox Starting Amount</string>
    <string name="login_continue_button">Continue to Ingredients</string>
    <string name="login_back_button">Back to Home</string>
    <string name="add_participant_button">Add This Seller!</string>
    
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredient_price">Ingredient Cost</string>
    <string name="ingredient_quantity">Ingredient Quantity</string>
    <string name="ingredient_add_button">Save This Ingredient</string>
    <string name="ingredient_finish_button">Continue to Products</string>
    <string name="ingredient_back_button">Back to Login</string>
  
    <string name="product_name">Product Name</string>
    <string name="product_price">What is the selling price?</string>
    <string name="product_quantity">How many did you make?</string>
    <string name="product_add_button">Save This Product</string>
    <string name="product_finish_button">Ready to Sell!</string>
    <string name="product_back_button">Back to Ingredients</string>
    
    <string name="selling_back_button">Back to Products</string>
    <string name="selling_finish_button">End Session</string>
    <string name="new_customer">New Customer</string>
    <string name="finish_customer">Finish Customer</string>

    <string name="more_products_title">Add More Products?</string>
    <string name="more_products_message">Are you sure you need to add more Products?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="more_ingredients_title">Add More Ingredients?</string>
    <string name="more_ingredients_message">Are you sure you need to add more Ingredients?</string>

</resources>